[package]
name = "actix-tracing-sentry-repro"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
tracing = "0.1"
tracing-subscriber = "0.2.19"
tracing-actix-web = "0.2.1"
tracing-log = "0.1.2"
tracing-bunyan-formatter = "0.2.4"
actix-web-requestid = "1.1"
sentry-actix = "0.23.0"

[dependencies.sentry]
version = "0.23.0"
default-features = false
features = [
    "backtrace",
    "contexts",
    "panic",
    "reqwest",
    "rustls",
    "debug-images",
    "tracing"
]

